--- a/components/header/style.module.scss
+++ b/components/header/style.module.scss
@@ -1,15 +1,11 @@
 .header {
-   padding: 30px;
-   position: fixed;
+   padding: 0px;
+   position: absolute;
+   top: 20px;
+   right: 20px;
    display: flex;
    z-index: 50;
    justify-content: flex-end;
-   width: 20%;
-   @media screen and (orientation: portrait) {
-      justify-content: space-between;
-      flex-direction: row;
-      width: 100%;
-   }
 
    .button {
       width: 48px;
