Refactor About and ProjectDetail components, update font styles, and enhance GitHub links for projects

--- a/app/global.css
+++ b/app/global.css
@@ -2,20 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-   font-family: "PPTelegraf";
-   src: url("../assets/fonts/PPTelegrafOTF.otf");
-   font-style: normal;
-   font-weight: normal;
-}
-@font-face {
-   font-family: "Rafgins";
-   src: url("../assets/fonts/RafginsOTF.otf");
-   font-style: normal;
-   font-weight: 400;
-   font-display: swap;
+body {
+   font-family: "degular", "freight-big-pro", Arial, sans-serif;
 }
 
-body {
-   font-family: "PPTelegraf", "Rafgins", Arial, sans-serif;
+.font-hero {
+   @apply font-heroUse italic font-bold;
 }
